# Discord-clone

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEVELOPMENT_PROMPT.md  PROJECT_CONTEXT.md  README.md  compose.cloudflare-tunnel.yaml  compose.https.yaml  compose.production.example.yaml  compose.redis-smoke.yaml  compose.yaml  package.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py  errors.py  router.py
backend/app/core/: config.py  operation_limits.py  rate_limit.py  sanitize.py  security.py
backend/app/db/: pool.py  schema.sql  seed.py
backend/app/demo/: __init__.py  data.py  store.py  store_catalog.py
backend/app/domain/: __init__.py  permissions.py  snowflake.py
backend/app/gateway/: __init__.py  broadcaster.py  connection.py  events.py  manager.py  opcodes.py  reaper.py  router.py  subscriptions.py  voice_service.py  zombie_reaper.py
backend/app/realtime/: __init__.py  events.py  fanout.py  publisher.py  redis_bus.py  subscriber.py
backend/app/repositories/: dm_seed.py  dms.py  guild_channels.py  guild_common.py  guild_invites.py  guild_members.py  users.py  (+4 more)
backend/tests/: test_api_routes.py  test_config.py  test_demo_store.py  test_dm_api.py  test_dm_repository.py  test_dm_seed.py  test_dm_storage.py  test_gateway_manager.py  test_gateway_routes.py  test_guild_repository.py  test_message_schema.py  test_operation_limits.py  test_permissions.py  test_realtime_fanout.py  test_snowflake.py  test_store_api.py  test_store_catalog.py  test_store_schema.py
(+155 files in other folders)
