[project]
name = "discord-clone-backend"
version = "0.1.0"
description = "FastAPI backend for a zero-budget Discord clone."
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0,<0.32",
    "bcrypt>=5.0.0,<6",
    "fastapi>=0.136.1,<0.137",
    "gunicorn>=23.0.0,<24",
    "pydantic>=2.13.4,<3",
    "pydantic-settings>=2.12.0,<3",
    "pyjwt>=2.10.0,<3",
    "redis>=7.4.0,<8",
    "uvicorn[standard]>=0.47.0,<0.48",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0,<0.29",
    "pytest>=9.0.0,<10",
    "pytest-asyncio>=1.3.0,<2",
    "ruff>=0.14.0,<0.15",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
